--- a/themes/ananke/layouts/_default/summary-with-image.html
+++ b/themes/ananke/layouts/_default/summary-with-image.html
@@ -50,6 +50,41 @@
               {{ .Title }}
               </a>
           {{end}}
+          {{ if $.Param "angelo" }}
+            <a href="" class="color-inherit link">
+              {{ .Title }}
+              </a>
+          {{end}}
+          {{ if $.Param "chenyang" }}
+            <a href="" class="color-inherit link">
+              {{ .Title }}
+              </a>
+          {{end}}
+          {{ if $.Param "cigdem" }}
+            <a href="" class="color-inherit link">
+              {{ .Title }}
+              </a>
+          {{end}}
+          {{ if $.Param "david" }}
+            <a href="" class="color-inherit link">
+              {{ .Title }}
+              </a>
+          {{end}}
+          {{ if $.Param "irene" }}
+            <a href="" class="color-inherit link">
+              {{ .Title }}
+              </a>
+          {{end}}
+          {{ if $.Param "quanzheng" }}
+            <a href="" class="color-inherit link">
+              {{ .Title }}
+              </a>
+          {{end}}
+          {{ if $.Param "xavier" }}
+            <a href="" class="color-inherit link">
+              {{ .Title }}
+              </a>
+          {{end}}
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
           {{ .Summary }}
