--- a/themes/ananke/layouts/_default/summary-with-image.html
+++ b/themes/ananke/layouts/_default/summary-with-image.html
@@ -16,72 +16,72 @@
               </a>
           {{end}}
           {{ if $.Param "yew" }}
-            <a href="" class="color-inherit link">
+            <a href="https://personal.ntu.edu.sg/asysong/home.html" class="color-inherit link">
               {{ .Title }}
               </a>
           {{end}}
           {{ if $.Param "haowang" }}
-            <a href="" class="color-inherit link">
+            <a href="http://www.wanghao.in/index.html" class="color-inherit link">
               {{ .Title }}
               </a>
           {{end}}
           {{ if $.Param "lei" }}
-            <a href="" class="color-inherit link">
+            <a href="https://profiles.stanford.edu/lei-xing" class="color-inherit link">
               {{ .Title }}
               </a>
           {{end}}
           {{ if $.Param "fei" }}
-            <a href="" class="color-inherit link">
+            <a href="https://www4.mae.cuhk.edu.hk/peoples/chen-fei/" class="color-inherit link">
               {{ .Title }}
               </a>
           {{end}}
           {{ if $.Param "shuang" }}
-            <a href="" class="color-inherit link">
+            <a href="https://people.csail.mit.edu/lishuang/" class="color-inherit link">
               {{ .Title }}
               </a>
           {{end}}
           {{ if $.Param "haohe" }}
-            <a href="" class="color-inherit link">
+            <a href="http://people.csail.mit.edu/hehaodele/#page-top" class="color-inherit link">
               {{ .Title }}
               </a>
           {{end}}
           {{ if $.Param "haolan" }}
-            <a href="" class="color-inherit link">
+            <a href="https://lanhao.me" class="color-inherit link">
               {{ .Title }}
               </a>
           {{end}}
           {{ if $.Param "angelo" }}
-            <a href="" class="color-inherit link">
+            <a href="https://research.manchester.ac.uk/en/persons/angelo.cangelosi" class="color-inherit link">
               {{ .Title }}
               </a>
           {{end}}
           {{ if $.Param "chenyang" }}
-            <a href="" class="color-inherit link">
+            <a href="https://www.cse.wustl.edu/~lu/" class="color-inherit link">
               {{ .Title }}
               </a>
           {{end}}
           {{ if $.Param "cigdem" }}
-            <a href="" class="color-inherit link">
+            <a href="https://webapps.unitn.it/du/en/Persona/PER0233089/Curriculum" class="color-inherit link">
               {{ .Title }}
               </a>
           {{end}}
           {{ if $.Param "david" }}
-            <a href="" class="color-inherit link">
+            <a href="http://www.cs.toronto.edu/~duvenaud/" class="color-inherit link">
               {{ .Title }}
               </a>
           {{end}}
           {{ if $.Param "irene" }}
-            <a href="" class="color-inherit link">
+            <a href="https://irenechen.net" class="color-inherit link">
               {{ .Title }}
               </a>
           {{end}}
           {{ if $.Param "quanzheng" }}
-            <a href="" class="color-inherit link">
+            <a href="https://projects.iq.harvard.edu/camca/people/li-quanzheng-phd" class="color-inherit link">
               {{ .Title }}
               </a>
           {{end}}
           {{ if $.Param "xavier" }}
-            <a href="" class="color-inherit link">
+            <a href="https://www.xavierpuigf.com" class="color-inherit link">
               {{ .Title }}
               </a>
           {{end}}
